# codabench

./: .dockerignore  .editorconfig  .env_circleci  .env_sample  .envrc  .gitignore  CNAME  Caddyfile  Caddyfile.old  Containerfile.compute_worker_podman  Containerfile.compute_worker_podman_gpu  Dockerfile  Dockerfile.builder  Dockerfile.celery  Dockerfile.client  Dockerfile.compute_worker  Dockerfile.compute_worker_gpu  Dockerfile.compute_worker_gpu_bb  Dockerfile.flower  Dockerfile.rabbitmq  Dockerfile.spin  Dockerfile_new  INVESTIGATION.md  Procfile  README.md  Version_Bumps copy.md  Version_Bumps.md  analytics.csv  app.json  circle.yml  create_fake_competitions.py  create_fake_users.py  docker-compose copy.yml  docker-compose dev.yml  docker-compose.playwright.yml  docker-compose.selenium.yml  docker-compose.yml  fabfile.py  home_page_counters.json  manage.py  (+14 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: build_cw_image-branch.yml  build_cw_image-dev.yml  build_cw_image-prod.yml  docker-publish.yml  ghPages-dev.yml  ghPages-prod.yml  image_scan.yml  release-version-update.yml  test.yml  tests.yml  tests.yml.DISABLED  tests_pytest.yml  tests_pytest.yml.DISABLED
1.19.0/: 404.html  index.html
1.19.0/Contribute/: index.html
1.19.0/Project_CodaBench_FAQ/: index.html
1.19.0/contact-us/: index.html
1.20.0/: index.html
1.20.0/Contribute/: index.html
1.20.0/Project_CodaBench_FAQ/: index.html
1.20.0/contact-us/: index.html
1.20.0/search/: search_index.json
Bumps/: req_tree_4e8a419952b53430ebad140fb6becf50290be8da.md
charts/: Chart.yaml  values.yaml
charts/charts/: rabbitmq-14.7.0.tgz  redis-19.5.4.tgz
charts/dockerfiles/: Dockerfile  Dockerfile.compute_worker
charts/templates/: app-state-pvc.yaml  builder-deployment.yaml  caddy-deployment.yaml  caddy-service.yaml  compute-worker-deployment.yaml  compute-worker-pvc.yaml  compute-worker-rbac.yaml  configmap.yaml  django-deployment.yaml  django-service.yaml  flower-deployment.yaml  flower-service.yaml  ingress.yaml  istio.yaml  minio-deployment.yaml  minio-job.yaml  minio-service.yaml  minio-statefulset.yaml  postgres-deployment.yaml  postgres-service.yaml  postgres-statefulset.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-deployment.yaml  secrets.yaml  services.yaml  shared-pvc.yaml  site-worker-deployment.yaml  web-configmap.yaml  web-deployment.yaml  web-pvc.yaml  web-service.yaml
competition/: models.py
competition/submissions/: models.py  settings.py
compute_worker/: celery_config.py  compute_worker.py  compute_worker_requirements.txt  pyproject.toml
dev/: 404.html  index.html
dev/Contribute/: index.html
docs/: readme.md  submission_structure.md
documentation/: .gitignore  ABOUT.md  GOVERNANCE.md  PRIVACY.md  README.md  main.py  mkdocs.yml  pyproject.toml  zensical.toml
documentation/docs/: Project_CodaBench_FAQ.md  contact-us.md  index.md
documentation/docs/Contribute/: contributing.md  index.md
documentation/docs/Developers_and_Administrators/: Adding-e2e-tests.md  Administrator-procedures.md  Automating-with-Selenium.md  Codabench-Architecture.md  Codabench-Installation.md  Creating-and-Restoring-from-Backup.md  How-to-deploy-Codabench-on-your-server.md  Manual-validation.md  Robot-submissions.md  Running-tests.md  Submission-Docker-Container-Layout.md  Submission-Process-Overview.md  Validation-and-deployment-of-pull-requests.md
documentation/docs/Developers_and_Administrators/Upgrading_Codabench/: Add-line-into-.env-for-default-queue-worker-duration.md  Create-new-logos-for-each-competition.md  Database-size-fixes.md  Django-3.md  Django-4.md  Docker-py.md  Hide-output.md  Homepage-counters.md  Minio-image.md  Move-the-last-storage_inconsistency-files-from--logs-folder-to--var-logs--folder.md  Postgres-18.md  Rebuilding-all-docker-images.md  Submissions-and-Participants-Counts.md  Uncomment-a-line-in-your-.env-file.md  Upgrade-RabbitMQ.md  User-removal.md  Worker-Docker-Image-manual-update.md  index.md
documentation/docs/Newsletters_Archive/: CodaLab-in-2024.md  CodaLab-in-2025.md
documentation/docs/Organizers/Benchmark_Creation/: Advanced-Tutorial.md  Benchmark-Examples.md  Cancer-Benchmarks.md  Competition-Bundle-Structure.md  Competition-Creation-Form.md  Competition-Creation.md  Competition-Creation:-Bundle.md  Competition-Creation:-Form.md  Competition-docker-image.md  Dataset-competition-creation-and-participate-instruction.md  Detailed-Results-and-Visualizations.md  Getting-started-with-Codabench.md  How-to-transition-from-CodaLab-to-Codabench.md  How-to-transition-from-CodaLab-to-Codabench?.md  Leaderboard-Functionality.md  Public-Tasks-and-Tasks-Sharing.md  Yaml-Structure.md
documentation/docs/Organizers/Running_a_benchmark/: Competition-Detail-Page.md  Competition-Management-&-List.md  Compute-Worker-Management---Setup.md  Compute-worker-installation-with-Podman.md  Queue-Management.md  Resource-Management.md  Server-status-page.md  Update-programs-or-data.md
documentation/docs/Participants/: User_Participating-in-a-Competition.md
documentation/overrides/partials/: copyright.html
maintenance_mode/: maintenance.html
nginx/: nginx.conf.template
playwrightPython/: pyproject.toml  pytest.ini  test_account_creation.py  test_auth.py  test_competition.py  test_submission.py
podman/: containers.conf  podman-connections.json  worker-storage.conf
src/: asgi.py  celery_config.py  celeryconfig.py  comp_worker.py  consumers.py  factories.py  gunicorn_run.py  middleware.py  routing.py  site_worker.py  urls.py  wsgi.py
tests/: README.md  main.py  package.json  playwright.config.ts  pyproject.toml  pytest.ini  test_account_creation.py  test_auth.py  test_competition.py  test_submission.py
tests/config/: .env.playwright  config.toml  index.ts
tests/tests/: test_competition.spec.ts  test_submission.spec.ts
testsPlaywrightTypescript/: playwright.config.ts
v1.21.1/: 404.html  index.html
v1.24/: index.html
(+1144 files in other folders)
