[project]
name = "codabench"
version = "0.1.0"
description = ""
authors = [{ name = "Codalab" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "django>=4.2.0,<5",
    "django-oauth-toolkit==1.6.3",
    "django-cors-middleware==1.5.0",
    "social-auth-core>=4.1.0,<5",
    "social-auth-app-django>=5.0.0,<6",
    "django-extensions>=3.2,<4",
    "channels==4.2.0",
    "channels-redis==4.0.0",
    "pillow==12.1.1",
    "celery==4.4.7",
    "gunicorn==23.0",
    "urllib3==2.6.3",
    "uvicorn==0.38",
    "pyyaml==6.0.3",
    "watchdog==6.0.0",
    "argh==0.31.3",
    "python-dateutil==2.7.3",
    "bpython==0.26",
    "websockets==16.0.0",
    "aiofiles==25.1.0",
    "oyaml==1.0",
    "factory-boy==2.11.1",
    "bleach==6.3.0",
    "django-debug-toolbar==3.2",
    "django-querycount==0.7.0",
    "blessings==1.7",
    "django-su>=1.0.0,<2",
    "django-ajax-selects==2.0.0",
    "dj-database-url==0.4.2",
    "psycopg2-binary>=2.9.9,<3",
    "django-redis==4.12.1",
    "django-storages[azure]>=1.14.6,<2",
    "azure-storage-blob>=12,<13",
    "azure-storage-common==2.1.0",
    "boto3==1.42.50",
    "whitenoise==6.11.0",
    "djangorestframework>=3.13.0",
    "djangorestframework-csv==3.0.1",
    "drf-extensions==0.4.0",
    "markdown==3.10.2",
    "pygments==2.19.2",
    "drf-writable-nested==0.6.2",
    "django-filter==2.4.0",
    "flex==6.14.1",
    "pyrabbit2==1.0.7",
    "django-enforce-host==1.0.1",
    "twisted==25.5.0",
    "ipdb==0.13.13",
    "jinja2==3.1.6",
    "requests==2.32.5",
    "drf-extra-fields>=3.5.0",
    "botocore==1.42.50",
    "s3transfer==0.16.0",
    "drf-spectacular>=0.28.0,<0.29",
    "coreapi>=2.3.3,<3",
    "loguru>=0.7.3,<0.8",
    "tzdata>=2025.3",
    "setuptools==81",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=3.8.4",
    "pytest==7.4.4",
    "pytest-django==4.11.1",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.develop"  # Just "settings" since pytest will be running from src/
pythonpath = [".", "src", "src/apps"]
testpaths = ["src"]  # Tell pytest to look for tests in src/
addopts = "-v --tb=short --reuse-db"

