[project]
authors = [
    {name = "codalab"},
]
requires-python = "==3.10.19"
dependencies = [
    "celery==5.6.2",
    "requests>=2.32.4,<3",
    "watchdog==2.1.1",
    "argh==0.26.2",
    "websockets==16.0.0",
    "aiofiles==0.4.0",
    "pyyaml==6.0.1",
    "loguru>=0.7.3,<0.8",
    "docker>=7.1.0,<8",
    "rich>=14.2.0,<15",
    "setuptools>=82.0.0",
]

name = "compute-worker"
version = "0.1.0"
description = ""
