[project]
authors = [
    {name = "codalab"},
]
requires-python = "==3.13.11"
dependencies = [
    "celery==5.6.2",
    "requests>=2.32.4,<3",
    "watchdog==6.0.0",
    "argh==0.31.3",
    "websockets==16.0.0",
    "aiofiles==25.1.0",
    "pyyaml==6.0.3",
    "loguru>=0.7.3,<0.8",
    "docker>=7.1.0,<8",
    "rich>=14.2.0,<15",
    "setuptools>=82.0.0",
]

name = "compute-worker"
version = "0.1.0"
description = ""
