[project]
name = "codabench-mkdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mike>=2.1.3",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-to-pdf>=0.10.1",
]
